fix:blog -video overlapping issues

--- a/src/main.scss
+++ b/src/main.scss
@@ -3160,8 +3160,12 @@ m-inline-editor .m-blog--image {
 
 .medium-insert-embeds {
   position: relative;
-  width: calc(100% + 200px);
-  margin: 0 -100px; }
+  // width: calc(100% + 200px);
+  margin: 0 auto;
+  max-width: 740px;
+  padding-left: 20px;
+  padding-right: 20px;
+ }
   .medium-insert-embeds figure {
     margin: 0; }
 
